@@ -59,6 +59,7 @@ where XXXXXX is the bug number as listed below.
 384584  Callee saved registers listed first for AMD64, X86, and PPC architectures
 n-i-bz  Fix missing workq_ops operations (macOS)
 385182  PPC64 is missing support for the DSCR
+385207  PPC64, generate_store_FPRF() generates too many Iops
 
 Release 3.13.0 (15 June 2017)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
